Add parallax effect

--- a/src/template.html
+++ b/src/template.html
@@ -13,8 +13,18 @@
     <!-- CHANGE ABOVE AND IN WEBPACK CONFIG -->
   </head>
   <body>
-    <header><nav></nav></header>
-    <main><section></section></main>
-    <footer></footer>
+    <span>
+      <div id="layer-11"></div>
+      <div id="layer-10"></div>
+      <div id="layer-9"></div>
+      <div id="layer-8"></div>
+      <div id="layer-7"></div>
+      <div id="layer-6"></div>
+      <div id="layer-5"></div>
+      <div id="layer-4"></div>
+      <div id="layer-3"></div>
+      <div id="layer-2"></div>
+      <div id="layer-1"></div>
+    </span>
   </body>
 </html>
