Notify user upon invalid request

--- a/src/template.html
+++ b/src/template.html
@@ -4,13 +4,7 @@
     <meta charset="utf-8" />
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- CHANGE BELOW AND IN WEBPACK CONFIG-->
-    <!-- CHANGE BELOW AND IN WEBPACK CONFIG-->
-    <!-- CHANGE BELOW AND IN WEBPACK CONFIG-->
     <base href="/weather-app/" />
-    <!-- CHANGE ABOVE AND IN WEBPACK CONFIG -->
-    <!-- CHANGE ABOVE AND IN WEBPACK CONFIG -->
-    <!-- CHANGE ABOVE AND IN WEBPACK CONFIG -->
   </head>
   <body>
     <span>
@@ -37,6 +31,7 @@
           Submit
         </button>
       </form>
+      <img class="loading" />
     </main>
   </body>
 </html>
